--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
+    "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-particles": "^1.0.9",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
