--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
     "mockjs": "^1.1.0",
@@ -16,6 +17,7 @@
     "nprogress": "^0.2.0",
     "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
+    "vue-calendar-heatmap": "^0.8.4",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
