--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nprogress": "^0.2.0",
     "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
