--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
+    "jsonp": "^0.2.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
@@ -19,6 +20,7 @@
     "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.3.3",
+    "vue-jsonp": "^2.0.0",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
