--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.3.3",
     "vue-jsonp": "^2.0.0",
-    "vue-lazyload": "^3.0.0-rc.2",
+    "vue-lazyload": "^1.3.3",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
