--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cloudbase/js-sdk": "^1.7.2",
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
     "babel-polyfill": "^6.26.0",
