--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
+    "@multiavatar/multiavatar": "^1.0.7",
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
+    "fingerprintjs2": "^2.1.4",
     "jsonp": "^0.2.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.4",
@@ -22,6 +24,7 @@
     "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.3.3",
+    "vue-cropper": "^0.5.11",
     "vue-jsonp": "^2.0.0",
     "vue-lazyload": "^1.3.3",
     "vue-particles": "^1.0.9",
