--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "public-ip": "^6.0.1",
     "vscroll": "^1.5.3-passive",
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.3.3",
